--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
             background-color: rgb(199, 8, 8);
             color: white;
-            height: 36px;
-            width: 120px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-left: 16px;
+            padding-right: 16px;
             border: none;
             border-radius: 2px;
             cursor: pointer;
